--- a/stocktrade/src/main/resources/templates/indexAdm.html
+++ b/stocktrade/src/main/resources/templates/indexAdm.html
@@ -14,169 +14,14 @@
       <div class="container-fluid mt-2 mb-2">
         <div class="row ms-5 mt-5">
           <div class="col-md-6 custom-padding-left">
-            <h1 class="h5 fw-bold">Preços diários por valor de mercado</h1>
-            <p class="fs-8 mt-4 mb-3 max-width-800px cinza">
-              Atualizado em 19/09/2023
-            </p>
+            <h1 class="h4 fw-bold" th:text="'Olá, ' + ${session.usuarioLogado.nome}"></h1>
           </div>
         </div>
       </div>
 
       <div class="container mb-10">
         <div class="container">
-          <!-- Card 1 abaixo dos textos -->
-          <div class="row g-0 pt-3 custom-padding-left7">
-            <div class="col-md-6">
-              <div class="custom-card4">
-                <div class="card-body">
-                  <div
-                    class="custom-padding-left2 d-flex align-items-center altura-card"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-graph-up-arrow"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M0 0h1v15h15v1H0V0Zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5Z"
-                      />
-                      <path
-                        d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"
-                      />
-                    </svg>
-                    <p class="fs-5 mt-3 mb-3 custom-padding-left3">Em Alta!</p>
-                  </div>
-                  <div class="custom-card5 home-logado-card2">
-                    <div class="card-body">
-                      <div
-                        class="d-flex align-items-center altura-card home-logado-card"
-                      >
-                        <img
-                          src="images/petrobras-icon.png"
-                          class="img-fluid rounded-start margem-esquerda"
-                          alt="edu-financeira"
-                        />
-                        <div>
-                          <p class="fs-5 mt-3 mb-3">
-                            <span class="preto">Petrobras</span
-                            ><span class="cinza">PETR4</span>
-                          </p>
-                        </div>
-                        <div>
-                          <p class="fs-5 mt-3 mb-3 custom-padding-left4">
-                            2,95%
-                          </p>
-                        </div>
-                      </div>
-                      <div class="custom-card5 home-logado-card3">
-                        <div class="card-body">
-                          <div
-                            class="d-flex align-items-center altura-card home-logado-card"
-                          >
-                            <img
-                              src="images/itau-icon.png"
-                              class="img-fluid rounded-start margem-esquerda"
-                              alt="edu-financeira"
-                            />
-                            <div>
-                              <p class="fs-5 mt-3 mb-3">
-                                <span class="preto">Itau</span
-                                ><span class="cinza">ITUB4</span>
-                              </p>
-                            </div>
-                            <div>
-                              <p class="fs-5 mt-3 mb-3 custom-padding-left5">
-                                1,35%
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="custom-card4">
-                <div class="card-body">
-                  <div
-                    class="custom-padding-left2 d-flex align-items-center altura-card"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      fill="currentColor"
-                      class="bi bi-graph-down-arrow"
-                      viewBox="0 0 16 16"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M0 0h1v15h15v1H0V0Zm10 11.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-1 0v2.6l-3.613-4.417a.5.5 0 0 0-.74-.037L7.06 8.233 3.404 3.206a.5.5 0 0 0-.808.588l4 5.5a.5.5 0 0 0 .758.06l2.609-2.61L13.445 11H10.5a.5.5 0 0 0-.5.5Z"
-                      />
-                      <path
-                        d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16Zm0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15Z"
-                      />
-                    </svg>
-                    <p class="fs-5 mt-3 mb-3 custom-padding-left3">Em Baixa!</p>
-                  </div>
-                  <div class="custom-card6 home-logado-card2">
-                    <div class="card-body">
-                      <div
-                        class="d-flex align-items-center altura-card home-logado-card"
-                      >
-                        <img
-                          src="images/vale1-icon.png"
-                          class="img-fluid rounded-start margem-esquerda"
-                          alt="edu-financeira"
-                        />
-                        <div>
-                          <p class="fs-5 mt-3 mb-3">
-                            <span class="preto">Vale</span
-                            ><span class="cinza">VAL3</span>
-                          </p>
-                        </div>
-                        <div>
-                          <p class="fs-5 mt-3 mb-3 custom-padding-left4">
-                            -4,95%
-                          </p>
-                        </div>
-                      </div>
-                      <div class="custom-card6 home-logado-card3">
-                        <div class="card-body">
-                          <div
-                            class="d-flex align-items-center altura-card home-logado-card"
-                          >
-                            <img
-                              src="images/localiza1-icon.png"
-                              class="img-fluid rounded-start margem-esquerda"
-                              alt="edu-financeira"
-                            />
-                            <div>
-                              <p class="fs-5 mt-3 mb-3">
-                                <span class="preto">Localiza</span
-                                ><span class="cinza">RENT3</span>
-                              </p>
-                            </div>
-                            <div>
-                              <p class="fs-5 mt-3 mb-3 custom-padding-left6">
-                                -2,65%
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          
         </div>
 
         <div class="container-fluid mt-2 mb-2">
