--- a/stocktrade/src/main/resources/templates/fragments/cardInvista/cardInvista.html
+++ b/stocktrade/src/main/resources/templates/fragments/cardInvista/cardInvista.html
@@ -1,4 +1,4 @@
-<div th:fragment="cardInvista(titulo, descricao, beneficios, botao, linkBotao)" class="mb-3 custom-card3">
+<div th:fragment="cardInvista(titulo, descricao, beneficios, botao, linkBotao)" class=" custom-card3">
   <div class="card-body">
     <h5 class="card-title fw-bold text-center" th:text="${titulo}"></h5>
     <p class="card-text" th:text="${descricao}"></p>
