fix: :bug: Correções front

--- a/stocktrade/src/main/resources/templates/fragments/headerAdmFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerAdmFragment.html
@@ -35,7 +35,7 @@
           xmlns="http://www.w3.org/2000/svg"
           width="35"
           height="40"
-          fill="currentColor"
+          fill="white"
           class="bi bi-person-circle text-decoration-none perfilIcon"
           viewBox="0 0 16 16"
         >
