--- a/stocktrade/src/main/resources/templates/perfil.html
+++ b/stocktrade/src/main/resources/templates/perfil.html
@@ -9,7 +9,7 @@
   <main>
     <div th:replace="~{fragments/headerLogadoFragment :: header('indexLogado')}"></div>
 
-    <div class="container-fluid mt-5">
+    <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-md-4">
           <div class="card">
